Make rubrics spacing smaller and fix a bug in the grading service renderer

--- a/lms/static/sass/course/_rubric.scss
+++ b/lms/static/sass/course/_rubric.scss
@@ -21,7 +21,7 @@
   .rubric-label
   {
       position: relative;
-      padding: 15px 15px 25px;
+      padding: 0px 15px 15px 15px;
       width: 130px;
       min-height: 50px;
       min-width: 50px;
